--- a/QuiltBotUtility/QuiltBotUtility.csproj
+++ b/QuiltBotUtility/QuiltBotUtility.csproj
@@ -51,8 +51,13 @@
     <Compile Include="Money\MoneyManagerFactory.cs" />
     <Compile Include="Money\MoneyManagerType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robots\FiveMinutesRobot.cs" />
     <Compile Include="RobotUtil\FiveMinutesStrategy.cs" />
     <Compile Include="Trailing\DefaultTrailing.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="dlls\cAlgo.API.dll" />
+    <Content Include="dlls\cAlgo.API.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
